feat: reference test (#3)
* add files for ref test

* add files for ref test

* feat(test): reference test script

---------

Co-authored-by: Elevonic611 <harryli0810@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 target/
 .mooncakes/
 .moonagent/
-**.mid
 
 .vscode
 .vscode/
+
+resources/__pycache__
+resources/__pycache__/
+resources/from_py.txt
